crates/ui/tests/snapshots/panel_snapshots__human_control__limits_error.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: human_control_summary(&c)
---
panel: human_control
title: You're in control
placement: 7th sidebar entry (Screen::Control)
layout: mode_segment | mode_hint | limit_rows | kill_bottom_action
mode_segment:
  Observe active=true bg=PANEL_RAISED border=ACCENT focused=false
  Supervised active=false bg=PANEL border=BORDER_2 focused=false
  Auto active=false bg=PANEL border=BORDER_2 focused=false
mode_hint: Watch only — no orders sent.
limit_rows:
  copy: Risk limits unavailable (error: ledger unreachable)
kill_bottom_action:
  state: idle
  button_label: Stop trading
  help: Halts the trading agent and writes an incident report. Cancels open orders and flattens every position. Requires a typed confirmation.
